Wed Dec  2 11:32:35 1992  Linus Tolke Y  (linus@robin)

	* lyskom-rest.el (lyskom-message): The arguments to message are
	  format-string, arguments. Not string.

Mon Nov  9 00:15:04 1992  Linus Tolke Y  (linus@ruben)

	* startup.el (lyskom-clear-vars): lyskom-default-password shall
	  not be buffer-local. It is used to move information from one
	  buffer to another across process calls.

Wed Nov  4 22:35:51 1992  Linus Tolke Y  (linus@robin)

	* internal.el (lyskom-process-send-string): Errors are logged in
	  the lyskom-debug-communications-to-buffer.

Sun Sep  6 23:17:50 1992  Per Cederqvist  (ceder@robert)

	* ChangeLog: The last part of this file was lost between
	version 35.59 and 35.60. Reinserted it.

	* lyskom-rest.el (silent-read): Allow LF as well as CR to
	terminate the input string.

Sun Aug 30 20:00:14 1992  Linus Tolke Y  (linus@rune)

	* vars.el,async.el,macros.el,startup.el (lyskom-no-prompt):
	  removed variable.

Sun Aug 16 22:29:19 1992  Linus Tolke Y  (linus@robin)

	* lyskom-rest.el (lyskom-start-of-command, lyskom-end-of-command):
	  The prefetch is now turned on and of while executing a command.

	* vars.el: The version number is not 0.35

Wed Aug 12 06:35:09 1992  Linus Tolke Y  (linus@robin)

	* startup.el (lyskom-fetch-until-we-have-unread): Bugfix, it is
	  now possible to login without unread and get the default prompt.

Tue Aug  4 08:07:14 1992  Linus Tolke Y  (linus@robin)

	* reading.el (lyskom-enter-map-in-to-do-list): 0 is removed, not
	  substituted with nil.

Mon Aug  3 05:55:46 1992  Linus Tolke Y  (linus@robin)

	* swedish-string.el (lyskom-mode-map): ]terse urinl{gget added on
	  ] u.

	* async.el (lyskom-conf-fetched-p): required function.

	* lyskom-rest.el (lyskom-go-to-next-conf): Prefetch of all
	  text-trees started on entrance.
	  (lyskom-end-of-command): Try to shut of prefetch while fetching
	  text to get next prompt.

	* prefetch.el (lyskom-prefetch-limit): limit = 1;
	  MEMBERSHIPISREAD: new special type.