@@ -1,5 +1,5 @@
 #
-# $Id: Makefile,v 35.21 1993-02-04 04:00:48 linus Exp $
+# $Id: Makefile,v 35.22 1993-04-26 19:30:54 linus Exp $
 # Copyright (C) 1991  Lysator Academic Computer Association.
 #
 # This file is part of the LysKOM server.
@@ -22,9 +22,12 @@
 #
 # Please mail bug reports to bug-lyskom@lysator.liu.se. 
 #
-# $Id: Makefile,v 35.21 1993-02-04 04:00:48 linus Exp $
+# $Id: Makefile,v 35.22 1993-04-26 19:30:54 linus Exp $
 # $Log: Makefile,v $
-# Revision 35.21  1993-02-04 04:00:48  linus
+# Revision 35.22  1993-04-26 19:30:54  linus
+# Rewound to before prefetch.
+#
+# Revision 35.21  1993/02/04  04:00:48  linus
 # Removed the import.make dependencie of the Makefile.
 #
 # Revision 35.20  1992/07/30  19:49:22  linus
@@ -100,7 +103,7 @@ EMACS-BATCH = emacs -batch -l /usr/local/var/elisp/bytecomp
 
 # NOTE: lyskom-rest.el must be the last file in PARTS-EL and SRC-ELC.
 PARTS-EL = komtypes.el clienttypes.el startup.el \
-	reading.el prefetch.el \
+	reading.el \
 	internal.el parse.el services.el cache.el\
 	commands1.el commands2.el review.el edit-text.el \
 	view-text.el async.el completing-read.el \
@@ -114,7 +117,7 @@ SWEDISH-ELC = swedish-strings.elc
 ENGLISH-EL = english-strings.el
 ENGLISH-ELC = english-strings.elc
 SRC-ELC = komtypes.elc clienttypes.elc startup.elc \
-	reading.elc prefetch.elc \
+	reading.elc \
 	internal.elc parse.elc services.elc cache.elc\
 	commands1.elc commands2.elc review.elc edit-text.elc \
 	view-text.elc async.elc completing-read.elc \
