@@ -1,3 +1,8 @@
+Mon Apr 26 21:25:25 1993  Linus Tolke Y  (linus@bodil)
+
+	* lyskom-rest.el, startup.el, Makefile: rewound to before the
+	  testing with prefetch. Some bugs left fixed.
+
 Wed Dec  2 11:32:35 1992  Linus Tolke Y  (linus@robin)
 
 	* lyskom-rest.el (lyskom-message): The arguments to message are
